[package]
name = "nlo_text_editor_client"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-segmentation = "1"
crossterm = {version = "0.26", features = ["event-stream"]}
ratatui = {version = "0.23.0", features = ["all-widgets"]}
nlo_text_editor_server = {path = "../nlo_text_editor_server"}
serde = {version = "1.0", features = ["derive"]}
ron = "0.8"
